# bazel_new_rules_rust

./: .gitignore  WORKSPACE
examples/lib/: BUILD
examples/lib2/: BUILD
examples/lib2/src/: lib.rs
examples/proc-macro/: BUILD
examples/proc-macro/src/: lib.rs
rust/: def.bzl
rust/private/: binary.bzl  common.bzl  compile.bzl  library.bzl  providers.bzl  repo.bzl  repo.tpl.bazel  repositories.bzl  rust_toolchain.bzl  wrappers.bzl
rust/toolchain/: BUILD  toolchains.bzl
