package(default_visibility = [ "//visibility:public" ])

filegroup(
    name = "rustc",
    srcs = ["rustc/bin/rustc"],
)

filegroup(
    name = "rustc_lib_x86_64_darwin",
    srcs = glob(["rustc/lib/*.dylib"]),
)

filegroup(
    name = "rust_lib_x86_64_darwin",
    srcs = glob([
        "rust-std-x86_64-apple-darwin/lib/rustlib/x86_64-apple-darwin/lib/*.rlib",
        "rust-std-x86_64-apple-darwin/lib/rustlib/x86_64-apple-darwin/lib/*.dylib",
    ]),
)


filegroup(
    name = "rustc_lib_x86_64_linux",
    srcs = glob(["rustc/lib/*.so"]),
)
filegroup(
    name = "rust_lib_x86_64_linux",
    srcs = glob([
        "rust-std-x86_64-unknown-linux-gnu/lib/rustlib/x86_64-unknown-linux-gnu/lib/*.rlib",
        "rust-std-x86_64-unknown-linux-gnu/lib/rustlib/x86_64-unknown-linux-gnu/lib/*.so",
    ]),
)